test/corpus/primitives.txt
====
Primitives
====

√+ ? .+ ? 1 ×3 4

÷2 8 # Line
@x # these
1 # up
---

(source_file
  (primitive (monadic_primitive))  
  (primitive (dyadic_primitive))  
  (primitive (stack_primitive))  
  (primitive (stack_primitive))  
  (primitive (dyadic_primitive))  
  (primitive (stack_primitive))  
  (literal (number (integer)))
  (primitive (dyadic_primitive))  
  (literal (number (integer)))
  (literal (number (integer)))

  (primitive (dyadic_primitive))
  (literal (number (integer)))
  (literal (number (integer)))
  (literal (char))
  (literal (number (integer)))
)
